moved icons to another folder and updated views

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,14 @@
+.page-link:disabled{
+    background-color: rgb(140, 141, 145);
+    border-color: rgba(12, 3, 3, 0.99);
+    color: rgba(12, 3, 3, 0.99);
+}
 
+#page-create-input {
+    margin-top: -1px;
+}
+
+.form-control, .form-select {
+    border-width: 2px;
+
+}
